--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,11 @@
 				<li><a href="index.html">Home</a>
 				</li>
 				<li><a href="menu.html">Menu</a>
+					<ul>
+						<li><a href="breakfast">Breakfast</a></li>
+						<li><a href="lunch">Lunch</a></li>
+						<li><a href="dinner">Dinner</a></li>
+					</ul>
 				</li>
 				<li><a href="gallery.html">Gallery</a>
 				</li>
